# algorithms-to-live-by

./: Makefile  README.md  TODO.md  pyproject.toml  requirements.txt
explore_vs_exploit/: algorithms.py  explore_vs_exploit_problem.py  main.py  restuarant.py
explore_vs_exploit/tests/: test_algorithm.py  test_explore_vs_exploit_problem.py  test_main.py  test_restuarant.py
sorting/: algorithm.py  item.py  main.py  problem.py
sorting/tests/: test_algorithm.py  test_item.py  test_main.py  test_problem.py
src/algorithmstolivebypaulalexander/: algorithms.py  caching.py  candidate.py  candidate_list.py  explore_vs_exploit.py  explore_vs_exploit_algorithms.py  explore_vs_exploit_problem.py  item.py  main.py  memory.py  replacement_policy.py  sorting.py  sorting_problem.py
stopping_problem/: algorithms.py  candidate_list.py  main.py  thirty_seven_rule.py
stopping_problem/tests/: test_algorithms.py  test_candidate.py  test_candidate_list.py  test_main.py
tests/: test_algorithm.py  test_algorithms.py  test_candidate.py  test_candidate_list.py  test_explore_vs_exploit.py  test_explore_vs_exploit_problem.py  test_item.py  test_main.py  test_memory.py  test_replacement_policy.py  test_restuarant.py  test_sorting.py  test_sorting_problem.py
